# employee-control-tool

./: .editorconfig  .env.template  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  local.Dockerfile  manage.py  pyproject.toml  pytest.ini  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.gitlab/agents/k3s/: config.yaml
.helm/: .sops.yaml  Chart.yaml  secrets.yaml  values.yaml
.helm/charts/: postgresql-11.0.2.tgz
.helm/charts/migrations/: Chart.yaml  values.yaml
.helm/charts/web/: Chart.yaml  values.yaml
.helm/environments/production/: secrets.yaml  values.yaml
.helm/templates/: _helpers.tpl
.ops/: deploy_chart.sh
emt/: conftest.py  settings.py  urls.py  wsgi.py
emt/core/: constants.py
emt/employees/: models.py  serializers.py  urls.py  views.py
emt/employees/migrations/: 0001_initial.py  0002_initial.py  0003_employee_os.py  0004_remove_employee_os.py  0005_employee_telegram.py  0006_employee_gitlab_username.py  0007_employee_discord_username.py  0007_employee_monday_user_id.py  0008_rename_discord_username_employee_discord_id.py
emt/employees/tests/: factories.py  test_models.py
emt/groups/: models.py  serializers.py  urls.py  views.py
emt/groups/migrations/: 0001_initial.py  0002_initial.py
emt/providers/: README.md  models.py  urls.py
emt/swagger/: urls.py
emt/users/: urls.py  views.py
emt/utils/: choices.py  renderers.py
frontend/: .pnp.cjs  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  App.module.scss
(+87 files in other folders)
